--- a/packages/nouns-webapp/src/components/Winner/Winner.module.css
+++ b/packages/nouns-webapp/src/components/Winner/Winner.module.css
@@ -52,16 +52,21 @@
   }
 
   .wrapper {
-    width: 100%;
+    /* width: 100%;
     margin-left: 0;
     margin-right: 0;
     padding-right: 0;
     padding-left: 6px;
-    margin-top: 12px;
+    margin-top: 12px; */
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .leftCol {
-    padding-left: 0rem;
+    padding-left: 0.5rem;
   }
 
   .winnerContent {
